# zone-sdk-test

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  flake.nix  metadata.json
.github/workflows/: release.yml
docs/: 01-concepts.md  02-architecture.md  03-exercises.md  BUILD.md  FEEDBACK.md
interfaces/: IComponent.h
pinner/: Cargo.toml
pinner/src/: main.rs
src/: YoloBoardBackend.cpp  YoloBoardBackend.h  YoloBoardBackend.rep  YoloBoardInterface.h  YoloBoardPlugin.cpp  YoloBoardPlugin.h  app.rs  config.rs  main.cpp  main.rs  storage.rs  ui.rs  yolo_board_plugin.cpp  yolo_board_plugin.h  yolo_board_plugin.json
src/qml/: Main.qml
storage-tui/: Cargo.toml
storage-tui/src/: main.rs
