[package]
name = "zone-board"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "zone-board"
path = "src/main.rs"

[dependencies]
# Zone SDK — pinned to the tag that matches the running node.
# Update the tag here when upgrading the node.
lb-zone-sdk = { package = "logos-blockchain-zone-sdk", git = "https://github.com/logos-blockchain/logos-blockchain", tag = "0.1.2" }
lb-core = { package = "logos-blockchain-core", git = "https://github.com/logos-blockchain/logos-blockchain", tag = "0.1.2" }
lb-key-management-system-keys = { package = "logos-blockchain-key-management-system-keys", git = "https://github.com/logos-blockchain/logos-blockchain", tag = "0.1.2" }
lb-common-http-client = { package = "logos-blockchain-common-http-client", git = "https://github.com/logos-blockchain/logos-blockchain", tag = "0.1.2" }
futures = "0.3"

# TUI
ratatui   = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
rand    = "0.8"
hex     = "0.4"
clap    = { version = "4", features = ["derive", "env"] }
chrono  = { version = "0.4", features = ["clock"] }
reqwest              = { version = "0.12", default-features = false }
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

# core2 0.4.0 is yanked on crates.io; vendor it so the project builds on a
# fresh clone without a local logos-blockchain checkout.
[patch.crates-io]
core2 = { path = "vendor/core2" }
