[package]
name = "zone-cid-pinner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zone-cid-pinner"
path = "src/main.rs"

[dependencies]
logos-blockchain-zone-sdk = { git = "https://github.com/logos-blockchain/logos-blockchain", rev = "6b42706177dbbbde00db30d4ceca76e252cc1026", package = "logos-blockchain-zone-sdk" }
lb-core = { git = "https://github.com/logos-blockchain/logos-blockchain", rev = "6b42706177dbbbde00db30d4ceca76e252cc1026", package = "logos-blockchain-core" }
lb-common-http-client = { git = "https://github.com/logos-blockchain/logos-blockchain", rev = "6b42706177dbbbde00db30d4ceca76e252cc1026", package = "logos-blockchain-common-http-client" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"
