[package]
name = "logos-storage-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logos-storage-tui"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
